# rplidar-tcp-client

./: .gitignore  CHANGELOG.mc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.ini.example  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: DATA_FORMAT.md  Guía ROS 2.docx  index.md
docs/hardware/: rpi_create_cargo_bay.md
docs/images/: README.md
docs/rplidar_a1/: driver_setup.md  slam_setup.md
docs/software/: network_config.md  pi4_humble_setup.md  software.md
docs/troubleshooting/: hardware.md  ros2_network.md
examples/: README.md  continuous_stream.py  lidar_diagnostics.py  lidar_to_csv.py  lidar_to_json.py  print_scan_stub.py  simple_scan.py  streaming_lidar_to_jsonl.py  visualize_realtime.py
examples/01_basico/: continuous_stream.py  print_scan_stub.py  simple_scan.py  understanding_data.py
examples/02_intermedio/: lidar_diagnostics.py  lidar_to_csv.py  lidar_to_json.py  streaming_lidar_to_jsonl.py  visualize_realtime.py
examples/03_avanzado/: filter_by_angle.py  filter_by_distance.py  filter_by_quality.py
server/: README.md  requirements.txt  servidor_lidar_tcp.py
src/create3_lidar_client/: scan_client.py
src/lidar_client/: README.md  setup.py
src/lidar_client/lidar_client/: __init__.py  client.py
src/lidarclient/: __init__.py  client.py  config.py
tests/: test_smoke.py
tests/lidar_client/: setup.py
tests/lidar_client/lidar_client/: __init__.py  client.py
