[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "create3-lidar-client"
version = "0.1.0"
description = "Python client library to consume /scan (sensor_msgs/LaserScan) from a ROS 2 Create 3 setup."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
