[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rplidar-tcp-client"
version = "1.0.0"
description = "Python TCP client library for RPLIDAR A1 sensor on Raspberry Pi 4"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Pablo Tarrio", email = "pablo.tarrio@uie.edu" }
]
keywords = ["rplidar", "lidar", "tcp", "raspberry-pi", "sensor", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/PabloTarrio/rplidar-tcp-client"
Repository = "https://github.com/PabloTarrio/rplidar-tcp-client"
Issues = "https://github.com/PabloTarrio/rplidar-tcp-client/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
]
visualization = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/lidarclient",
    "--cov-report=term-missing",
    "--cov-report=html",
]
